--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.14",
+    "@heroicons/react": "^2.0.17",
     "@tailwindcss/forms": "^0.5.4",
     "axios": "^1.3.6",
     "flowbite": "^1.7.0",
