--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "flowbite-react": "^0.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.14.2",
     "typed.js": "^2.0.15"
