--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "flowbite": "^1.7.0",
     "flowbite-react": "^0.5.0",
     "react": "^18.2.0",
+    "react-animated-numbers": "^0.16.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-redux": "^8.0.5",
