--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.3.6",
     "flowbite": "^1.7.0",
     "flowbite-react": "^0.5.0",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-animated-numbers": "^0.16.0",
     "react-dom": "^18.2.0",
