--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-animated-numbers": "^0.16.0",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.4",
     "react-hot-toast": "^2.4.1",
+    "react-pdf": "^7.3.3",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.14.2",
     "typed.js": "^2.0.15",
