--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@reduxjs/toolkit": "^1.9.5",
     "@tailwindcss/forms": "^0.5.4",
     "axios": "^1.3.6",
+    "firebase": "^10.6.0",
     "flowbite": "^1.7.0",
     "flowbite-react": "^0.5.0",
     "prop-types": "^15.8.1",
